fix: navbar spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -175,7 +175,6 @@ header {
   top: 0;
   left: 0;
   z-index: 2;
-  padding: 8px 0;
   transition: 300ms;
   z-index: 1001;
 }
